docs/v1.3.0/en/api/core-extra/ShipVisualSlotInfo.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `ShipVisualSlotInfo`
- [← Area / Back to core-extra](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# ShipVisualSlotInfo

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public struct ShipVisualSlotInfo`
**Base:** none
**File:** `TaleWorlds.Core/ShipVisualSlotInfo.cs`

## Overview

`ShipVisualSlotInfo` lives in `TaleWorlds.Core` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.Core` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Usage Example

```csharp
var example = new ShipVisualSlotInfo();
```

## See Also

- [Complete Class Catalog](../catalog)